MAJ avril 2024: simplifications

--- a/01-Analyse_spectrale.ipynb
+++ b/01-Analyse_spectrale.ipynb
@@ -5,7 +5,8 @@
    "id": "4ae2b43e",
    "metadata": {},
    "source": [
-    "V1.2 - 2023-07-22 - JLC"
+    "V1.2 - 2023-07-22 - JLC <br>\n",
+    "V1.3 - 2024-04-21 - JLC correction typos + Simplifications."
    ]
   },
   {
@@ -21,7 +22,8 @@
     "## [ 2 - Calculs Python avec numpy et numpy.fft](#2)\n",
     "### [2.1 Calcul d'un signal discrétisé simple : signal sinusoïdal ](#2.1)\n",
     "### [2.2 Calcul d'un signal carré](#2.2)\n",
-    "## [ 3 - Théorème de Schanon et repliement spectral¶](#3)"
+    "## [ 3 - Théorème de Schanon et repliement spectral¶](#3)\n",
+    "<br><br>"
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e7d4bd27",
    "metadata": {},
    "outputs": [],
@@ -69,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5258f297",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
+    "%matplotlib inline"
    ]
   },
   {
@@ -92,12 +94,12 @@
    "id": "202a155b",
    "metadata": {},
    "source": [
-    "Soit le signal $x(t) = \\displaystyle{2.5 \\sin\\left(\\frac{2\\pi t}{T}\\right)}$, de période $T$ et d'amplitude 2.5, défini à l'aide de la fonction `sin` du module *numpy* :"
+    "Soit le signal $x$ defini par $x: t \\longmapsto \\displaystyle{2.5 \\sin\\left(\\frac{2\\pi t}{T}\\right)}$, de période $T$ et d'amplitude 2.5, défini à l'aide de la fonction `sin` du module *numpy* :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "817e4a2e",
    "metadata": {},
    "outputs": [],
@@ -111,7 +113,7 @@
    "id": "4eeb2fec",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\"> $\\leadsto$  Grâce à la *vectorisation* de la fonction `np.sin`, le paramètre `t` peut-être un simple scalaire ou un tableau `np.ndarray` de valeurs temporelles.</span>"
+    "<span style=\"color:green\"> $\\leadsto$  Grâce à la *vectorisation* de la fonction `np.sin`, le paramètre `t` peut être un simple scalaire ou un tableau `np.ndarray` de valeurs temporelles.</span>"
    ]
   },
   {
@@ -120,25 +122,17 @@
    "metadata": {},
    "source": [
     "##### Paramètres du signal sinusoïdal\n",
-    "On défini :\n",
+    "On définit :\n",
     "- `Fs`, la fréquence du signal sinus, égale à 125 Hz.\n",
     "- `Ts`, la période correspondante."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2b4d8a3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Féquence Fs=125 Hz, période Ts=8.00 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Fs = 125  # fréquence signal en Hertz\n",
     "Ts = 1/Fs # période signal\n",
@@ -260,7 +254,10 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from tools.utils import plot_sig_ech\n",
+    "help(plot_sig_ech)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,7 +272,6 @@
    "execution_count": null,
    "id": "f433a1aa",
    "metadata": {
-    "scrolled": false,
     "tags": []
    },
    "outputs": [],
@@ -306,7 +302,7 @@
     "(si besoin, voir https://numpy.org/doc/stable/reference/generated/numpy.fft.rfft.html)</span>\n",
     "- <span style=\"color:blue\">Calculer le **spectre d'amplitude** `A` égal au module des éléments de `X` multiplié par 2 et divisé par $N$ ($N$ : nbre d'échantillons temporels).<br>\n",
     "(Indication : la fonction [np.absolute](https://numpy.org/doc/stable/reference/generated/numpy.absolute.html) permet de calculer le vecteur des modules des éléments d'un vecteur complexe (*element wise*))</span>\n",
-    "- <span style=\"color:blue\">Faire afficher A.</span>"
+    "- <span style=\"color:blue\">Faire afficher les valeurs de A.</span>"
    ]
   },
   {
@@ -375,40 +371,19 @@
    "id": "85b5bb25",
    "metadata": {},
    "source": [
-    "#### Tracé du spectre d'amplitude\n",
+    "### d - Tracé du spectre d'amplitude\n",
     "\n",
     "La fonction `plot_spectre_amplitude` du module `tools.utils` utilse la fonction [stem](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.stem.html) du module `matplolib` pour tracer le spectre d'amplitude du signal échantillonné sous la forme de barres verticales."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "66b295b5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function plot_spectre_amplitude in module tools.utils:\n",
-      "\n",
-      "plot_spectre_amplitude(f_ech, spectre, f_max=None, title=\"Spectre d'amplitude\", nb_line_printed=0, plot_harmonics=False)\n",
-      "    Trace les raies du spectre d'amplitude d'un signal discrétisé.\n",
-      "    \n",
-      "    Arguments:\n",
-      "                 f_ech: le vecteur des fréquences discrètes\n",
-      "               spectre: le vecteur des amplitude du spectre pour les fréquences discrètes.\n",
-      "                 title: titre du tracé (défaut: \"Spectre d'amplitude\").\n",
-      "      nb_line_printed: nombre de raies listés sous le graphe (fréquence et amplitude), défaut=0\n",
-      "        plot_harmonics: Pour faire tracer les raies harmoniques, if faut donner un couple \n",
-      "                        (nbre max d'hamoniques, width) dont la signification est donnée \n",
-      "                        avec la fonction find_harmonics. Valeur par défault: False.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.utils import plot_spectre_amplitude\n",
     "help(plot_spectre_amplitude)"
@@ -479,7 +454,7 @@
    "id": "c249bae6",
    "metadata": {},
    "source": [
-    "#### e - Échantillonnage sur une durée quelconque"
+    "### e - Échantillonnage sur une durée quelconque"
    ]
   },
   {
@@ -494,42 +469,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2b87bcd1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function process_periodic_signal in module tools.utils:\n",
-      "\n",
-      "process_periodic_signal(x, Fs, Fe, D, temporal_plot=True, nb_line_printed=0, temporal_title='Tracé temporel', spectral_title=\"Spectre d'amplitude\")\n",
-      "    - Calcule le vecteur des temps discrets,\n",
-      "    - Trace l'allure temporelle du signal discrétisé\n",
-      "    - Calcule la FFT et le spectre d'amplitude du signal,\n",
-      "    - Trace le spectre d'amplitude.\n",
-      "    \n",
-      "    Arguments :\n",
-      "      x : fonction vectorisée définissant le signal périodique, qui doit prendre \n",
-      "          2 arguments : le vecteur des instants d'échantillonage, et la période du signal.\n",
-      "      Fs: fréquence du signal x en Hertz.\n",
-      "      Fe: fréquence d'échantilonnage en Hertz.\n",
-      "      D : durée de l'échantillonnage en secondes. \n",
-      "      nb_line_printed: nombre de raies listées sous le graphe (fréquence et amplitude), défaut=0\n",
-      "      temporal_title: titre du tracé temporel\n",
-      "      spectral_title: titre du tracé du spectre\n",
-      "    \n",
-      "    Retour:\n",
-      "      renvoie t_ech, x_ech, f_ech, A\n",
-      "        t_ech: vecteur des instants d'échantillonnage\n",
-      "        x_ech: vecteur des valeur du signal échantillonné\n",
-      "        f_ech: vecteur des fréquences discrètes\n",
-      "        A: spectre d'amplitude du signal échantillonné\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.utils import process_periodic_signal\n",
     "help(process_periodic_signal)"
@@ -572,16 +515,14 @@
    "id": "001bb828",
    "metadata": {},
    "source": [
-    "- <span style=\"color:blue\">Refaire le même travail en choisissant un pas en fréquence $\\Delta f$ de 5 Hz et en désactivantle tracé de l'allure temporelle.</span>"
+    "- <span style=\"color:blue\">En utilisant les relations $\\Delta F = F_e/N$, et $D = N T_e = N/F_e$ choisir une durée $D$ pour avoir un pas en fréquence $\\Delta f$ de 5 Hz : tracer le spectre d'amplitude avec la focntion `process_periodic_signal` en désactivant le tracé de l'allure temporelle.</span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9c38c858",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -599,9 +540,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eff9ac2b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -650,21 +589,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cea40cf4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scipy in /home/jlc/work/miniconda3/envs/minfo/lib/python3.6/site-packages (1.5.4)\r\n",
-      "Requirement already satisfied: numpy>=1.14.5 in /home/jlc/work/miniconda3/envs/minfo/lib/python3.6/site-packages (from scipy) (1.19.5)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install scipy"
    ]
@@ -696,7 +626,7 @@
    "source": [
     "#### Définition du signal carré\n",
     "La fonction [square](https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.signal.square.html)\n",
-    "du module `scipy.signal` définit un signal carré périodique de période égale $2\\pi$.<br>\n",
+    "du module `scipy.signal` définit un signal carré périodique de période égale à $2\\pi$.<br>\n",
     "Pour en faire un signal carré de fréquence $F_c$ (période $T_c = 1/F_c$), il faut multiplier le temps par $2\\pi/ T_c$."
    ]
   },
@@ -730,9 +660,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5e553539",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -783,7 +711,7 @@
    "id": "8dbe7d0e",
    "metadata": {},
    "source": [
-    "## 4 $-$ Théorème de Schannon et repliement spectral <a name=\"4\"></a>"
+    "## 3 $-$ Théorème de Schannon et repliement spectral <a name=\"3\"></a>"
    ]
   },
   {
@@ -807,7 +735,7 @@
    "id": "cb5ba232",
    "metadata": {},
    "source": [
-    "- <span style=\"color:blue\">Pour illustrer le phénomène de **repliement spectral**, faire tracer avec la fonction `process_periodic_signal` le spectre d'amplitude du signal $2.5\\sin(2\\pi F_s t)$ échantillonné à $F_e = 1000$ Hz sur une durée $D = 1/10$ s, pour des valeurs de $F_s$ égales à 400, 600 700 et 800 Hz."
+    "- <span style=\"color:blue\">Pour illustrer le phénomène de **repliement spectral**, faire tracer avec la fonction `process_periodic_signal` le spectre d'amplitude du signal $ x: t \\longmapsto 2.5\\sin(2\\pi F_s t)$ (définit au paragraphe 2.1) échantillonné à $F_e = 1000$ Hz sur une durée $D = 1/10$ s, pour des valeurs de $F_s$ égales à 400, 600 700 et 800 Hz."
    ]
   },
   {
@@ -867,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
