--- a/02-Synthese_de_Fourier.ipynb
+++ b/02-Synthese_de_Fourier.ipynb
@@ -5,7 +5,8 @@
    "id": "1986c188",
    "metadata": {},
    "source": [
-    "V1.2 - 2023-11-10"
+    "V1.2 - 2023-07-22 - JLC <br>\n",
+    "V1.3 - 2024-04-21 - JLC correction typos + Simplifications."
    ]
   },
   {
@@ -15,16 +16,15 @@
    "source": [
     "# EEA - Analyse/Syntèse de Fourier <a name=\"top\"></a>\n",
     "\n",
-    "## [1 $-$ Présentation du TP](#1)\n",
-    "## [2 $-$ Écoute, visualisation et analyse de sons issus de fichiers WAV](#2)\n",
-    "## [3 $-$ Création/modification de sons](#3)\n",
-    "\n",
+    "## [1 - Présentation du TP](#1)\n",
+    "## [2 - Écoute, visualisation et analyse de sons issus de fichiers WAV](#2)\n",
+    "## [3 - Création/modification de sons](#3)\n",
     "<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e01c9fa9",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "afd15d53",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "73fa0944",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b86116de",
    "metadata": {},
    "outputs": [],
@@ -126,10 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88c96a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: simpleaudio in /home/jlc/work/miniconda3/envs/minfo/lib/python3.10/site-packages (1.0.4)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install simpleaudio"
    ]
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "be0bbf68",
    "metadata": {},
    "outputs": [],
@@ -375,9 +383,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d1d00a60",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -441,7 +447,7 @@
    "id": "5c092f37",
    "metadata": {},
    "source": [
-    "On reprend le le signal sinusoïdal déjà manipulé dans le TP précédent : $$x(t) = \\displaystyle{\\sin\\left( 2\\pi F_s t\\right)} = \\displaystyle{\\sin\\left(\\frac{2\\pi t}{T_s}\\right)}$$ de période $T_s$ défini à l'aide de la fonction `sin` du module *numpy* :"
+    "On reprend le le signal sinusoïdal déjà manipulé dans le TP précédent : $$x: t \\longmapsto \\displaystyle{\\sin\\left( 2\\pi F_s t\\right)} = \\displaystyle{\\sin\\left(\\frac{2\\pi t}{T_s}\\right)}$$ de période $T_s$ défini à l'aide de la fonction `sin` du module *numpy* :"
    ]
   },
   {
@@ -544,6 +550,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b469e5c-44ba-41fa-9f74-828503ff2824",
+   "metadata": {},
+   "source": [
+    "- <span style=\"color:Green\">Refaire le tracé de l'allure temporelle du son pur avec la fonction `plot_sig_ech` en utilisant l'argument nommé `x_lim` pour faire le tracé sur l'intervalle de temps (0, Ts) :</spawn> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a9f0a2-d5b5-4266-88b5-b4076af1c48f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b855ef16",
    "metadata": {},
    "source": [
@@ -586,8 +608,8 @@
    "id": "801ea3fd",
    "metadata": {},
    "source": [
-    "- <span style=\"color:Green\">Définir `amplitude`, égale à `np.iinfo(np.int16).max`</spawn>\n",
-    "- <span style=\"color:Green\">Définir `data`, le signal `sin440` multiplié par `amplitude`.</spawn>\n",
+    "- <span style=\"color:Green\">Définir `AMPLITUDE`, égale à `np.iinfo(np.int16).max`</spawn>\n",
+    "- <span style=\"color:Green\">Définir `data`, le signal `sin440` multiplié par le coefficient `AMPLITUDE`.</spawn>\n",
     "- <span style=\"color:Green\">Utiliser la fonction `wav_write` pour écrire `data` dans le fichier \"sin440.wav\" (si besoin, l'aide sur la fonction `wav_write` est [ici](tools/scipy_wav.ipynb#wav_write)).<br>\n",
     "    _Indication_: les données `data` doivent être passées à la fonction `wav_write` sous la forme convertie en entiers de 16 bits : __`data.astype(np.int16)`__</spawn><br>\n",
     "- <span style=\"color:Green\">Écouter le fichier WAV obtenu."
@@ -624,13 +646,13 @@
    "id": "254cebc7",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Pour se rapprocher de l'allure temporelle des sons ciblés (piano, clavecin...) , definir la fonction `weight` qui prend en argument un vecteur d'instants temporels, un temps `t1` et un entier `n` et qui échantillonne sur ces instants une enveloppe constituée :</spawn>\n",
+    "<span style=\"color:Green\">Pour se rapprocher de l'allure temporelle des sons ciblés (piano, clavecin...) , pn définit la fonction `weight` qui prend en argument un vecteur d'instants temporels, un temps `t1` et un entier `n` et qui échantillonne sur ces instants une enveloppe constituée :</spawn>\n",
     "- <span style=\"color:Green\">d'une attaque linéaire de 0 à 1 en `t1` secondes</spawn>\n",
     "- <span style=\"color:Green\">suivie d'une descente en exponentielle décroissante partant de 1, de la forme $\\displaystyle{\\left(e^{(t_1-t)}\\right)^n}$ .</spawn>\n",
     "\n",
     "![allure_enveloppe.png](img/allure_enveloppe.png)\n",
     "\n",
-    "<span style=\"color:Green\">La fonction `weight` renvoie le tableau __ndarray__ des valeurs de l'enveloppe temporelle échantillonnées sur les instants de `t_ech`.</spawn>\n"
+    "<span style=\"color:Green\">La fonction `weight` renvoie le tableau __ndarray__ des valeurs de l'enveloppe temporelle échantillonnées sur les instants de `t_ech` :</spawn>\n"
    ]
   },
   {
@@ -639,14 +661,25 @@
    "id": "9c0f0381",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def weight(t_ech, t1, n):\n",
+    "    T = []\n",
+    "    for t in t_ech:\n",
+    "        if t < t1: \n",
+    "            T.append(t/t1)\n",
+    "        else:\n",
+    "            T.append(np.exp(t1-t)**n)\n",
+    "    return np.array(T)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f617614a",
    "metadata": {},
    "source": [
-    "- <span style=\"color:Green\">Définir le nouveau signal `sin440_w` égal au produit term à terme de `sin440` par `weight(t_ech, 30e-3, 3)` (_indication_: utiliser le produit `*`). Tracer son allure temporelle.</spawn>"
+    "- <span style=\"color:Green\">Définir le nouveau signal `sin440w` égal au produit terme à terme de `sin440` par `weight(t_ech, 30e-3, 3)`<br>\n",
+    "(_indication_: L'opérateur `*` utilisé avec 2 tableaux **ndarray** réalise le produit terme à terme...).<br>\n",
+    "Tracer l'allure temporelle de `sin440`.</spawn>"
    ]
   },
   {
@@ -662,7 +695,7 @@
    "id": "59e4dbe2",
    "metadata": {},
    "source": [
-    "- <span style=\"color:Green\">Comment précédemment, écrire le signal `sin440_w` multiplié par `amplitude` dans le fichier `\"sin440_w.wav\"` puis écouter le fichier WAV obtenu.</spawn>"
+    "- <span style=\"color:Green\">Comment précédemment, écrire le signal `sin440w` multiplié par le coeffeicient `AMPLITUDE` dans le fichier `\"sin440w.wav\"` puis écouter le fichier WAV obtenu.</spawn>"
    ]
   },
   {
@@ -723,9 +756,9 @@
    "id": "2950af07",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Définir la fonction `synthese_Fourier` qui prend en arguments :</spawn>\n",
-    "- <span style=\"color:Green\">la fréquence du fondamental,</spawn>\n",
-    "- <span style=\"color:Green\">le nombre d'harmonique à ajouter,</spawn>\n",
+    "<span style=\"color:Green\">On Définit ici la fonction `synthese_Fourier` qui prend en arguments :</spawn>\n",
+    "- <span style=\"color:Green\">la fréquence $F_1$ du fondamental,</spawn>\n",
+    "- <span style=\"color:Green\">le nombre $N$ d'harmoniques à ajouter,</spawn>\n",
     "- <span style=\"color:Green\">la liste des amplitudes des harmoniques,</spawn>\n",
     "- <span style=\"color:Green\">le vecteur des instants d'échantillonnage.</spawn>\n",
     "    \n",
@@ -737,11 +770,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3b3aee80",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def synthese_fourier(freq_1, nb_harm, ampl_harm, vect_t):\n",
+    "    # le fondamental:\n",
+    "    x = np.sin(2*pi*freq_1*vect_t)\n",
+    "    \n",
+    "    for i, a in enumerate(ampl_harm, 2):\n",
+    "        f_harmo = i*freq_1\n",
+    "        #print(f\"{f_harmo:8d} Hz\\t{a:8.4f}\")\n",
+    "        x = x + a*np.sin(2*pi*f_harmo*vect_t) \n",
+    "        \n",
+    "    return x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -756,7 +800,7 @@
    "id": "5a27701b",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Définir `sin440_p`, la synthèse de Fourier du son de piano obtenue avec les amplitudes des 8 premières harmoniques `picp_p`. Normaliser les valeurs de `sin440_p`.</spawn>"
+    "<span style=\"color:Green\">En utilisant la fonction `synthese_fourier`, définir `sin440p`, la synthèse de Fourier d'un son de piano à 440 Hz, obtenue avec les amplitudes des 8 premières harmoniques `picp_p`. Normaliser les valeurs de `sin440p`.</spawn>"
    ]
   },
   {
@@ -772,7 +816,7 @@
    "id": "3fb8dc2f",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Multiplier `sin440_p` par `np.iinfo(np.int16).max`, puis par l'enveloppe `weight(t_ech, 5e-3, 3)` et enregistrer le signal obtenu dans le fichier `sin440_p.wav`.</spawn>"
+    "<span style=\"color:Green\">Multiplier `sin440p` par le coefficient `AMPLITUDE`, puis par l'enveloppe `weight(t_ech, 5e-3, 3)` et enregistrer le signal obtenu dans le fichier `sin440p.wav`.</spawn>"
    ]
   },
   {
@@ -790,8 +834,8 @@
    "source": [
     "<span style=\"color:Green\">Jouer successivement :</spawn>\n",
     "- <span style=\"color:Green\">le son original du piano (`WAV/A4-piano-2s.wav`),</spawn>\n",
-    "- <span style=\"color:Green\">le son sinus pur avec l'enveloppe temporelle (`sin440_w.wav`),</spawn>\n",
-    "- <span style=\"color:Green\">le son créé par synthèse de Fourier (`sin440_p.wav`) :</spawn>"
+    "- <span style=\"color:Green\">le son sinus pur avec l'enveloppe temporelle (`sin440w.wav`),</spawn>\n",
+    "- <span style=\"color:Green\">le son créé par synthèse de Fourier (`sin440p.wav`) :</spawn>"
    ]
   },
   {
@@ -815,7 +859,7 @@
    "id": "a37d9472",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Définir `sin440_c`, la synthèse de Fourier du son de clavecin obtenue avec les amplitudes des 15 premières harmoniques `picp_c`. Normaliser les valeurs de `sin440_c`.</spawn>"
+    "<span style=\"color:Green\">Définir `sin440c`, la synthèse de Fourier du son de clavecin obtenue avec les amplitudes des 15 premières harmoniques `picp_c`. Normaliser les valeurs de `sin440c`.</spawn>"
    ]
   },
   {
@@ -831,7 +875,7 @@
    "id": "41b198f1",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Multiplier `sin440_c` par `np.iinfo(np.int16).max`, puis par l'enveloppe `weight(t_ech, 10e-3, 2)` et enregistrer le signal obtenu dans le fichier `sin440_c.wav`.</spawn>"
+    "<span style=\"color:Green\">Multiplier `sin440c` par le coefficient `AMPLITUDE`, puis par l'enveloppe `weight(t_ech, 10e-3, 2)` et enregistrer le signal obtenu dans le fichier `sin440c.wav`.</spawn>"
    ]
   },
   {
@@ -849,8 +893,8 @@
    "source": [
     "<span style=\"color:Green\">Jouer successivement :</spawn>\n",
     "- <span style=\"color:Green\">le son original du clavecin (`WAV/A4-clavecin-2s.wav`),</spawn>\n",
-    "- <span style=\"color:Green\">le son sinus pur avec l'enveloppe temporelle (`sin440_w.wav`),</spawn>\n",
-    "- <span style=\"color:Green\">le son de clavecin créé par synthèse de Fourier (`sin440_c.wav`) :</spawn>"
+    "- <span style=\"color:Green\">le son sinus pur avec l'enveloppe temporelle (`sin440w.wav`),</spawn>\n",
+    "- <span style=\"color:Green\">le son de clavecin créé par synthèse de Fourier (`sin440c.wav`) :</spawn>"
    ]
   },
   {
@@ -878,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
