--- a/tools/scipy_wav.ipynb
+++ b/tools/scipy_wav.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "be199e9e",
    "metadata": {},
    "outputs": [],
@@ -47,44 +47,63 @@
       "Help on function read in module scipy.io.wavfile:\n",
       "\n",
       "read(filename, mmap=False)\n",
-      "    Open a WAV file\n",
+      "    Open a WAV file.\n",
       "    \n",
-      "    Return the sample rate (in samples/sec) and data from a WAV file.\n",
+      "    Return the sample rate (in samples/sec) and data from an LPCM WAV file.\n",
       "    \n",
       "    Parameters\n",
       "    ----------\n",
       "    filename : string or open file handle\n",
-      "        Input wav file.\n",
+      "        Input WAV file.\n",
       "    mmap : bool, optional\n",
-      "        Whether to read data as memory-mapped.\n",
-      "        Only to be used on real files (Default: False).\n",
+      "        Whether to read data as memory-mapped (default: False).  Not compatible\n",
+      "        with some bit depths; see Notes.  Only to be used on real files.\n",
       "    \n",
       "        .. versionadded:: 0.12.0\n",
       "    \n",
       "    Returns\n",
       "    -------\n",
       "    rate : int\n",
-      "        Sample rate of wav file.\n",
+      "        Sample rate of WAV file.\n",
       "    data : numpy array\n",
-      "        Data read from wav file. Data-type is determined from the file;\n",
-      "        see Notes.\n",
+      "        Data read from WAV file. Data-type is determined from the file;\n",
+      "        see Notes.  Data is 1-D for 1-channel WAV, or 2-D of shape\n",
+      "        (Nsamples, Nchannels) otherwise. If a file-like input without a\n",
+      "        C-like file descriptor (e.g., :class:`python:io.BytesIO`) is\n",
+      "        passed, this will not be writeable.\n",
       "    \n",
       "    Notes\n",
       "    -----\n",
-      "    This function cannot read wav files with 24-bit data.\n",
-      "    \n",
       "    Common data types: [1]_\n",
       "    \n",
       "    =====================  ===========  ===========  =============\n",
       "         WAV format            Min          Max       NumPy dtype\n",
       "    =====================  ===========  ===========  =============\n",
       "    32-bit floating-point  -1.0         +1.0         float32\n",
-      "    32-bit PCM             -2147483648  +2147483647  int32\n",
-      "    16-bit PCM             -32768       +32767       int16\n",
-      "    8-bit PCM              0            255          uint8\n",
+      "    32-bit integer PCM     -2147483648  +2147483647  int32\n",
+      "    24-bit integer PCM     -2147483648  +2147483392  int32\n",
+      "    16-bit integer PCM     -32768       +32767       int16\n",
+      "    8-bit integer PCM      0            255          uint8\n",
       "    =====================  ===========  ===========  =============\n",
       "    \n",
-      "    Note that 8-bit PCM is unsigned.\n",
+      "    WAV files can specify arbitrary bit depth, and this function supports\n",
+      "    reading any integer PCM depth from 1 to 64 bits.  Data is returned in the\n",
+      "    smallest compatible numpy int type, in left-justified format.  8-bit and\n",
+      "    lower is unsigned, while 9-bit and higher is signed.\n",
+      "    \n",
+      "    For example, 24-bit data will be stored as int32, with the MSB of the\n",
+      "    24-bit data stored at the MSB of the int32, and typically the least\n",
+      "    significant byte is 0x00.  (However, if a file actually contains data past\n",
+      "    its specified bit depth, those bits will be read and output, too. [2]_)\n",
+      "    \n",
+      "    This bit justification and sign matches WAV's native internal format, which\n",
+      "    allows memory mapping of WAV files that use 1, 2, 4, or 8 bytes per sample\n",
+      "    (so 24-bit files cannot be memory-mapped, but 32-bit can).\n",
+      "    \n",
+      "    IEEE float PCM in 32- or 64-bit format is supported, with or without mmap.\n",
+      "    Values exceeding [-1, +1] are not clipped.\n",
+      "    \n",
+      "    Non-linear PCM (mu-law, A-law) is not supported.\n",
       "    \n",
       "    References\n",
       "    ----------\n",
@@ -92,6 +111,8 @@
       "       Interface and Data Specifications 1.0\", section \"Data Format of the\n",
       "       Samples\", August 1991\n",
       "       http://www.tactilemedia.com/info/MCI_Control_Info.html\n",
+      "    .. [2] Adobe Systems Incorporated, \"Adobe Audition 3 User Guide\", section\n",
+      "       \"Audio file formats: 24-bit Packed Int (type 1, 20-bit)\", 2007\n",
       "    \n",
       "    Examples\n",
       "    --------\n",
@@ -197,11 +218,12 @@
       "    Write to 16-bit PCM, Mono.\n",
       "    \n",
       "    >>> from scipy.io.wavfile import write\n",
+      "    >>> import numpy as np\n",
       "    >>> samplerate = 44100; fs = 100\n",
       "    >>> t = np.linspace(0., 1., samplerate)\n",
       "    >>> amplitude = np.iinfo(np.int16).max\n",
       "    >>> data = amplitude * np.sin(2. * np.pi * fs * t)\n",
-      "    >>> write(\"example.wav\", samplerate, data)\n",
+      "    >>> write(\"example.wav\", samplerate, data.astype(np.int16))\n",
       "\n"
      ]
     }
@@ -235,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
